# open-gallery

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml  workspace.toml
.docker/pgadmin/: servers.json
bases/open_gallery/api/: core.py  exceptions.py  settings.py
bases/open_gallery/api/identity/: exceptions.py  router.py  schemas.py  utils.py
bases/open_gallery/api/images/: exceptions.py  router.py
bases/open_gallery/api/ioc/: settings.py
bases/open_gallery/api/publications/: router.py  schemas.py
bases/open_gallery/api/settings/: __init__.py
bases/open_gallery/api/tags/: router.py
components/open_gallery/context/: __init__.py  core.py
components/open_gallery/dishka/: __init__.py
components/open_gallery/dishka/providers/: settings.py
components/open_gallery/file_storage/: __init__.py  interface.py  ioc.py
components/open_gallery/hashing/: __init__.py  argon.py  bcrypt.py  interface.py  ioc.py  sha256.py
components/open_gallery/http_utils/: __init__.py  constants.py  core.py
components/open_gallery/identity/: __init__.py  dtos.py  entities.py  exceptions.py  ioc.py  repository.py  settings.py  uow.py
components/open_gallery/identity/services/: tokens.py  verification.py
components/open_gallery/identity/use_cases/: get_user_list.py  login_user.py  logout_user.py  refresh_token.py  register_user.py  search_users.py  set_role.py  verify_user.py
components/open_gallery/images/: __init__.py  entities.py  exceptions.py  ioc.py  repository.py  settings.py  uow.py  utils.py
components/open_gallery/images/use_cases/: upload.py
components/open_gallery/jwt/: __init__.py  exceptions.py  impl.py  interface.py  payload.py
components/open_gallery/logging/: __init__.py  config.py  enums.py  filters.py  formatter.py  settings.py
components/open_gallery/notifications/: __init__.py  entities.py  ioc.py
components/open_gallery/notifications/use_cases/: get_notifications.py
components/open_gallery/passwords/: __init__.py  ioc.py
components/open_gallery/passwords/complexity/: impl.py  interface.py
components/open_gallery/persistence/: database.py  exceptions.py  ioc.py  repository.py  settings.py  uow.py
components/open_gallery/persistence/repositories/: images.py  publications.py  tags.py  users.py
components/open_gallery/persistence/tables/: base.py  images.py  keys.py  mappers.py  notifications.py  publications.py  tags.py  users.py
components/open_gallery/persistence/type_decorators/: __init__.py  datetime.py  enum.py  identity.py  notifications.py  shared_types.py
components/open_gallery/publications/: __init__.py  dtos.py  entities.py  exceptions.py  ioc.py  repository.py  uow.py
components/open_gallery/publications/use_cases/: add_comment.py  approve.py  create.py  delete_comment.py  get.py  get_comments.py  get_list.py  get_not_approved.py  (+3 more)
components/open_gallery/routing/: __init__.py  logging_route.py  router.py  utils.py
components/open_gallery/settings/: app.py  base.py  server.py
components/open_gallery/shared/: __init__.py  entity.py  exceptions.py  pagination.py  repository.py  sentinel.py  types.py  uow.py  use_case.py
components/open_gallery/shared_api/: __init__.py  exceptions.py  model.py  router.py  types.py
components/open_gallery/tags/: __init__.py  dtos.py  entities.py  exceptions.py  ioc.py  repository.py  uow.py
projects/api/: Dockerfile  alembic.ini  pyproject.toml  run.py
projects/api/alembic/: env.py  script.py.mako
projects/api/alembic/versions/: 20250330_1513-34bbcde2a9a3_users.py  20250405_1046-aa0b1763820a_user_refersh_tokens.py  20250405_1128-43411c52b407_user_verified.py  20250405_1134-1f240a7e4933_verification_codes.py  20250405_1956-e02e70ba8205_images.py  20250405_2058-61c920656dc6_images_uploaded_by.py  20250406_1244-1950fe751884_publications.py  20250406_1625-008746c3816d_tags.py  20250412_1806-d85c958c9901_user_notifications.py  20250412_1820-4ce61c9cd010_notification_type.py  20250412_1824-289d4a9d3797_notification_related_object_id.py  20250412_1914-595c3bb9a4fb_notification_related_object_nullable.py  20250412_1916-e0791884b7af_notification_seen.py  20250413_1204-c659474cfeec_publication_references.py  20250413_1300-7d7dd79f4cc4_comment_threads.py
(+24 files in other folders)
