[build-system]
requires = ["hatchling", "hatch-polylith-bricks"]
build-backend = "hatchling.build"

[project]
name = "api"
version = "0.1.0"

authors = [{ name = "g.kharitonov", email = "haritonovgleb123@gmail.com" }]

requires-python = ">= 3.12"

dependencies = [
  "pydantic>=2.10.3",
  "pydantic-settings>=2.7.0",
  "sqlalchemy>=2.0.36",
  "alembic>=1.14.0",
  "granian>=2.1.2",
]

[tool.hatch.build]
dev-mode-dirs = ["../../components", "../../bases"]

[tool.hatch.build.hooks.polylith-bricks]

[tool.polylith.bricks]
"../../bases/open_gallery/api" = "open_gallery/api"
