[build-system]
requires = ["hatchling", "hatch-polylith-bricks"]
build-backend = "hatchling.build"

[project]
name = "api"
version = "0.1.0"

authors = [{ name = "g.kharitonov", email = "haritonovgleb123@gmail.com" }]

requires-python = ">= 3.12"

dependencies = [
  "pydantic>=2.10.3",
  "pydantic-settings>=2.7.0",
  "sqlalchemy>=2.0.36",
  "alembic>=1.14.0",
  "granian>=2.1.2",
  "fastapi>=0.115.11",
  "uvloop>=0.21.0",
  "python-json-logger>=3.3.0",
  "orjson>=3.10.15",
  "uuid7>=0.1.0",
  "dishka>=1.5.1",
  "asyncpg>=0.30.0",
  "psycopg2-binary>=2.9.10",
]

[tool.hatch.build]
dev-mode-dirs = ["../../components", "../../bases"]

[tool.hatch.build.hooks.polylith-bricks]

[tool.polylith.bricks]
"../../bases/open_gallery/api" = "open_gallery/api"

[dependency-groups]
local = ["psycopg2>=2.9.10"]
